# django-pyhub-rag

./: .gitignore  CLAUDE.md  Makefile  README.md  diff  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: about.md  ask_with_choices.md  cli-commands.md  handsonlab.md  index.md  llm.md  mcp-integration.md  release-notes.md  toml.md
docs/parser/: information-extract.md  upstage.md
docs/parser/upstage-document-parse/: describe-prompts.md  index.md  simple-rag.md
docs/rag/: plugin-architecture.md  vector-document.md
docs/release-notes/: index.md
docs/sessions/20250531-django-pyhub-rag-feat-upstage/: index.md
docs/stylesheets/: extra.css
examples/: http_math_server.py  mcp_config.toml  mcp_math_server.py  mcp_mixed_config.toml  react_agent_example.py  simple_math_server.py  weather_server.py
examples/extraction_schemas/: contract_schema.json  invoice_schema.json
samples/argus-bitumen/: argus-bitumen.html  argus-bitumen.jsonl  argus-bitumen.md  argus-bitumen.txt
samples/argus-bitumen/chart/: 10.txt  11.txt  12.txt  13.txt  14.txt  16.txt
samples/argus-bitumen/figure/: 11.txt  19.txt  20.txt  3.txt  6.txt
samples/argus-bitumen/p001/: 06-figure.txt  11-figure.txt  13-chart.txt  13-table.txt  14-table.txt  16-chart.txt  18-table.txt
samples/argus-bitumen/p002/: 24-figure.txt  25-table.txt  27-chart.txt  28-table.txt  29-table.txt  31-chart.txt  32-table.txt
samples/argus-bitumen/p003/: 44-chart.txt  45-table.txt  47-chart.txt  49-table.txt  53-table.txt  54-table.txt
samples/argus-bitumen/p004/: 70-chart.txt  71-chart.txt  72-table.txt  73-table.txt
samples/argus-bitumen/p005/: 100-chart.txt  85-table.txt  93-chart.txt
samples/argus-bitumen/p006/: 122-table.txt  124-table.txt  126-chart.txt  127-table.txt  129-table.txt  131-table.txt  (+1 more)
src/pyhub/: __init__.py  caches.py  init.py
tests/: conftest.py  django_settings.py  test_agents.py  test_caches.py  test_config.py  test_fields.py  test_fields_core.py  test_fields_postgres.py  test_fields_sqlite.py  test_function_calling.py  test_information_extract.py  test_llm.py  test_llm_files.py  test_mcp_integration.py  test_mcp_transports.py  test_models.py  test_multi_mcp.py  test_react_agent.py  test_settings.py  test_toml.py  test_utils.py  test_validators.py
tests/test_app/: __init__.py  models.py
(+138 files in other folders)
